--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="scan_toast_noProductFound">No product found for this barcode</string>
     <string name="productDetails_toast_notAMedia">Not a media</string>
     <string name="scan_toast_notAValidBarcode">Not a valid barcode</string>
-    <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -32,11 +31,11 @@
     <string name="product_details_isbn">ISBN: %s</string>
     <string name="product_details_editor">Editor: %s</string>
     <string name="product_details_category">Category: %s</string>
-    <string name="product_details_unknow">Unknown</string>
+    <string name="product_details_unknown">Unknown</string>
     <string name="Login_read_policy_start">I have read and accept the</string>
     <string name="Login_read_policy_end">Privacy Policy</string>
     <string name="login_error_accept_policy">You must accept the Privacy Policy to login</string>
-    <string name="mainMenu_scan_ortext">Or</string>
+    <string name="mainMenu_scan_orText">Or</string>
     <string name="mainMenu_account_title">Account</string>
     <string name="mainMenu_account_requestButton">Requests</string>
     <string name="mainMenu_account_buttonRequestAccess">Request Access</string>
