--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,7 +29,7 @@
     <string name="accept">Accepter</string>
     <string name="decline">Refuser</string>
     <string name="product_details_brand">Marque: %s</string>
-    <string name="product_details_isbn">ISBN: %s</string>
+    <string name="product_details_isbn">ISBN/EAN/UPC: %s</string>
     <string name="product_details_editor">Éditeur: %s</string>
     <string name="product_details_category">Catégorie: %s</string>
     <string name="product_details_unknown">Inconnu</string>
