--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="requestActivity_accept">Accept</string>
     <string name="requestActivity_deny">Deny</string>
     <string name="ActivityRequest_title">Requests</string>
+    <string name="mainMenu_account_accessRefused">You don\'t have access to this user\'s data</string>
 </resources>
