--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,8 @@
     <string name="requestActivity_deny">Deny</string>
     <string name="ActivityRequest_title">Requests</string>
     <string name="mainMenu_account_accessRefused">You don\'t have access to this user\'s data</string>
+    <string name="mainMenu_search">Search</string>
+    <string name="mainMenu_search_title">Search</string>
+    <string name="mainMenu_search_inputHint">Search a title or an ISBN</string>
+    <string name="mainMenu_account_inputHint">Email</string>
 </resources>
