remove some unnecessary comments

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,4 +51,6 @@
     <string name="mainMenu_account_inputHint">Adresse mail</string>
     <string name="mainActivity_search_textHeader">de</string>
     <string name="mainActivity_search_headerNameForUser">votre librairie</string>
+    <string name="mainMenu_scan_buttonStopScan">Arréter</string>
+    <string name="mainMenu_media_title">Bibliothèque</string>
 </resources>
